[package]
name = "async-stream-impl"
version = "0.1.1"
edition = "2018"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "proc macros for async-stream crate"
documentation = "https://docs.rs/async-stream-impl/0.1.0/async-stream-impl"
homepage = "https://github.com/tokio-rs/async-stream"
repository = "https://github.com/tokio-rs/async-stream"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits", "full", "visit-mut"]}
quote = "1"
