[package]
name = "async-stream"
# When releasing to crates.io:
# - Update CHANGELOG.md
# - Create git tag
version = "0.3.2"
edition = "2018"
rust-version = "1.45"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "Asynchronous streams using async & await notation"
repository = "https://github.com/tokio-rs/async-stream"

[dependencies]
async-stream-impl = { version = "=0.3.2", path = "../async-stream-impl" }
futures-core = "0.3"

[dev-dependencies]
futures-util = "0.3"
rustversion = "1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
trybuild = "1"
