[package]
name = "async-stream"
# When releasing to crates.io:
# - Update CHANGELOG.md
# - Create git tag
version = "0.3.5"
edition = "2021"
rust-version = "1.65"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "Asynchronous streams using async & await notation"
repository = "https://github.com/tokio-rs/async-stream"

[dependencies]
async-stream-impl = { version = "=0.3.5", path = "../async-stream-impl" }
futures-core = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
futures-util = "0.3"
rustversion = "1"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
trybuild = "1"
